For some reason, when executed from command line the TargetPlatformVersion is set to 7.0

--- a/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp.csproj
+++ b/TotalCrossVM/builders/vc2013/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp/PhoneDirect3DXamlApp.csproj
@@ -12,6 +12,7 @@
     <RootNamespace>PhoneDirect3DXamlAppInterop</RootNamespace>
     <AssemblyName>PhoneDirect3DXamlAppInterop</AssemblyName>
     <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
+    <TargetPlatformVersion>8.0</TargetPlatformVersion>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
     <SilverlightApplication>true</SilverlightApplication>
